--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "notable",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "serve": "node server.js",
-    "dev": "nodemon server.js",
     "prod": "node dist/api.bundle.js",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "node --inspect=3070 -r ts-node/register ./index.ts",
+    "start:dev": "nodemon",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,15 @@
   },
   "homepage": "https://github.com/lwesley08/node-api#readme",
   "dependencies": {
+    "@types/express": "^4.17.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   }
