--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@types/express": "^4.17.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.5.9"
+    "mongodb": "^3.5.9",
+    "ts-loader": "^7.0.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
