--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/lwesley08/node-api#readme",
   "dependencies": {
     "@types/express": "^4.17.6",
+    "@types/mongodb": "^3.5.25",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
