--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "notable",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "src/server.ts",
   "scripts": {
     "prod": "node dist/api.bundle.js",
     "build": "webpack",
-    "start": "node -r ts-node/register ./index.ts",
+    "start": "node -r ts-node/register ./src/server.ts",
     "start:dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tslint": "tslint --project tsconfig.json --config tslint.json",
