--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
   "dependencies": {
     "@types/express": "^4.17.6",
     "@types/mongodb": "^3.5.25",
+    "@types/mongoose": "^5.7.30",
+    "@types/validator": "^13.1.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
-    "ts-loader": "^7.0.5"
+    "mongoose": "^5.9.22",
+    "ts-loader": "^7.0.5",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
