--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/mongodb": "^3.5.25",
     "@types/mongoose": "^5.7.30",
     "@types/validator": "^13.1.0",
+    "awilix": "^4.2.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
