--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "@types/express": "^4.17.6",
     "@types/mongodb": "^3.5.25",
     "@types/mongoose": "^5.7.30",
+    "@types/swagger-jsdoc": "^3.0.2",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.0",
     "awilix": "^4.2.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.22",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4",
     "ts-loader": "^7.0.5",
     "validator": "^13.1.1"
   },
