--- a/package.json
+++ b/package.json
@@ -23,15 +23,25 @@
   },
   "homepage": "https://github.com/lwesley08/node-api#readme",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
     "@types/mongodb": "^3.5.25",
     "@types/mongoose": "^5.7.30",
+    "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/validator": "^13.1.0",
     "awilix": "^4.2.6",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.22",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "ts-loader": "^7.0.5",
     "validator": "^13.1.1"
   },
